[package]
name = "ht"
description = "Human Optimized Templates"
version = "0.3.0"
authors = ["Alexey Novakov <novakov.alex@gmail.com>"]
edition = "2018"

[dependencies]
hocon = "0.9.0"
handlebars = { version = "4.3.4", features = ["dir_source"] }
serde_json = "1.0.85"
serde = "1.0.145"
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }